--- a/auth.py.example
+++ b/auth.py.example
@@ -1,6 +1,9 @@
 # Your Garmin Connect credentials
 USERNAME = "changeme@changeme.com"
 PASSWORD = "changeme"
+ATHELETE_ID = "i-foo"
+API_KEY = "foo"
+
 
 # Number of days to fetch (default: last 3 days)
 DAYS_TO_FETCH = 3
